[project]
name = "quantum-nematode-workspace"
version = "1.0.0"
description = "Quantum brain simulation workspace for C. elegans nematode navigation"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = []
maintainers = []
requires-python = ">=3.12,<3.13"
keywords = [
    "quantum",
    "machine-learning",
    "nematode",
    "simulation",
    "qiskit",
    "quantum-computing",
    "reinforcement-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "Private :: Do Not Upload",
]
dependencies = [
    "pre-commit>=4.5.1",
    "pygame>=2.6.1",
    "pyright>=1.1.408",
    "qiskit-aer>=0.17.2",
    "ruff>=0.15.1",
    "torch>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/SyntheticBrains/nematode"
Repository = "https://github.com/SyntheticBrains/nematode"
Documentation = "https://github.com/SyntheticBrains/nematode#readme"
Issues = "https://github.com/SyntheticBrains/nematode/issues"

[project.optional-dependencies]
cpu = [
  "quantum-nematode[cpu]",
]
gpu = [
  "quantum-nematode[gpu]",
]
torch = [
  "quantum-nematode[torch]",
]
qpu = [
  "quantum-nematode[qpu]",
]
pixel = [
  "quantum-nematode[pixel]",
]

[tool.uv.sources]
quantum-nematode = { workspace = true }

[dependency-groups]
dev = [
    "quantum-nematode",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ['ALL']
ignore = ['FIX002', 'PLC0415', 'TD002', 'TD003']

[tool.ruff.lint.per-file-ignores]
"/**/tests/**/*.py" = [
  "ANN",
  "ARG",
  "D100",
  "D104",
  "PLR2004",
  "S101",
  "SLF001",  # Tests can access private members for testing
  "T201",
]
"/**/runners.py" = [
  "SLF001",  # Runners intentionally access private agent members
]
"scripts/*.py" = [
  "T201",  # CLI scripts use print for output
  "PLR2004",  # CLI scripts can have magic values
  "E501",  # CLI scripts can have slightly longer lines for readability
]
"**/utils/interrupt_handler.py" = [
  "T201",  # Interactive prompts use print for user output
  "PLR2004",  # Menu choice constants
]
"packages/quantum-nematode/quantumnematode/benchmark/categorization.py" = [
  "PLR2004",  # Grid size thresholds are domain-specific magic values
]
"packages/quantum-nematode/quantumnematode/experiment/git_utils.py" = [
  "S607",  # Git commands are safe subprocess calls
  "TRY300",  # Git utility functions have acceptable control flow
]
"packages/quantum-nematode/quantumnematode/experiment/tracker.py" = [
  "PLR0913",  # capture_experiment_metadata needs many parameters for completeness
]
"packages/quantum-nematode/quantumnematode/experiment/storage.py" = [
  "BLE001",  # Need to catch broad exceptions when loading experiment files
  "TRY300",  # Acceptable control flow for file operations
]
"packages/quantum-nematode/quantumnematode/benchmark/validation.py" = [
  "TRY300",  # Acceptable control flow for validation
]
"scripts/benchmark_submit.py" = [
  "BLE001",  # CLI error handling needs to catch broad exceptions
]
"scripts/run_simulation.py" = [
  "BLE001",  # CLI error handling needs to catch broad exceptions
]

[tool.ruff.lint.pydocstyle]
convention = "numpy" # https://numpydoc.readthedocs.io/en/latest/format.html#sections

[tool.pyright]
include = [
  "packages/quantum-nematode",
]
exclude = [
  "**/__pycache__",
  "**/*venv*",
  "**/.direnv",
  "**/.pkg",
  "**/.virtual_documents",
]
reportMissingImports = "error"
reportMissingTypeStubs = false
reportMatchNotExhaustive = "error"
reportUnusedFunction = "error"
reportConstantRedefinition = "error"
pythonVersion = "3.12"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
testpaths = ["packages/quantum-nematode/tests"]
addopts = "-n auto"
markers = [
    "smoke: Smoke tests that run entry-point scripts (excluded from pre-commit)",
    "nightly: Nightly regression tests against benchmarks (slow)",
]
